// Copyright Â© 2016 Zenly <hello@zen.ly>.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

/******************************************************************************/
/**               THIS SCHEMA IS FOR AUTOMATED TESTING ONLY                  **/
/**        MODIFYING IT IN ANY WAY WOULD RESULT IN MASSIVE BREAKAGE          **/
/**                                                                          **/
/**                 /!\ DO NOT EVER MODIFY THIS FILE /!\                     **/
/******************************************************************************/

syntax = "proto3";

package protoscan;

message TestSchema {
	string uid = 1;
	string fq_name = 2;
	map<string, string> deps = 4;
}
